// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel_info_header should match snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <ChannelIcon
      hasDraft={false}
      isActive={false}
      isArchived={false}
      isInfo={true}
      isUnread={false}
      membersCount={3}
      size={24}
      testID="channel_info.header.channel_icon"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      type="O"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#3f4350",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
          "marginLeft": 13,
        }
      }
      testID="channel_info.header.display_name"
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          testID="channel_info.header.purpose"
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Header"
          id="channel_info.header"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            {
              "adjacentParagraph": {
                "marginTop": 6,
              },
              "horizontalRule": {
                "backgroundColor": "#3f4350",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": {
                "color": undefined,
              },
            }
          }
          disableAtChannelMentionHighlight={true}
          disableGallery={true}
          onChannelLinkPress={[MockFunction]}
          testID="channel_info.header.header"
          textStyles={
            {
              "code": {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": {
                "fontFamily": "Menlo",
              },
              "del": {
                "textDecorationLine": "line-through",
              },
              "emph": {
                "fontStyle": "italic",
              },
              "error": {
                "color": "#d24b4e",
              },
              "heading1": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": {
                "paddingBottom": 8,
              },
              "heading2": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": {
                "paddingBottom": 8,
              },
              "heading3": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": {
                "paddingBottom": 8,
              },
              "heading4": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": {
                "paddingBottom": 8,
              },
              "heading5": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": {
                "paddingBottom": 8,
              },
              "heading6": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": {
                "paddingBottom": 8,
              },
              "link": {
                "color": "#386fe5",
              },
              "mention": {
                "color": "#386fe5",
              },
              "mention_highlight": {
                "backgroundColor": "#ffd470",
                "color": "#1b1d22",
              },
              "strong": {
                "fontWeight": "bold",
              },
              "table_header_row": {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      [
        {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <InjectIntl(FormattedText)
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot when DM and hasGuests and is the teammate 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <ChannelIcon
      hasDraft={false}
      isActive={false}
      isArchived={false}
      isInfo={true}
      isUnread={false}
      membersCount={3}
      size={24}
      testID="channel_info.header.channel_icon"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      type="D"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#3f4350",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
          "marginLeft": 13,
        }
      }
      testID="channel_info.header.display_name"
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <View
      style={
        {
          "paddingHorizontal": 15,
        }
      }
    >
      <InjectIntl(FormattedText)
        defaultMessage="This person is a guest"
        id="channel.isGuest"
        style={
          {
            "backgroundColor": "transparent",
            "color": "#3f4350",
            "fontSize": 13,
            "marginBottom": 10,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          testID="channel_info.header.purpose"
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Header"
          id="channel_info.header"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            {
              "adjacentParagraph": {
                "marginTop": 6,
              },
              "horizontalRule": {
                "backgroundColor": "#3f4350",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": {
                "color": undefined,
              },
            }
          }
          disableAtChannelMentionHighlight={true}
          disableGallery={true}
          onChannelLinkPress={[MockFunction]}
          testID="channel_info.header.header"
          textStyles={
            {
              "code": {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": {
                "fontFamily": "Menlo",
              },
              "del": {
                "textDecorationLine": "line-through",
              },
              "emph": {
                "fontStyle": "italic",
              },
              "error": {
                "color": "#d24b4e",
              },
              "heading1": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": {
                "paddingBottom": 8,
              },
              "heading2": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": {
                "paddingBottom": 8,
              },
              "heading3": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": {
                "paddingBottom": 8,
              },
              "heading4": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": {
                "paddingBottom": 8,
              },
              "heading5": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": {
                "paddingBottom": 8,
              },
              "heading6": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": {
                "paddingBottom": 8,
              },
              "link": {
                "color": "#386fe5",
              },
              "mention": {
                "color": "#386fe5",
              },
              "mention_highlight": {
                "backgroundColor": "#ffd470",
                "color": "#1b1d22",
              },
              "strong": {
                "fontWeight": "bold",
              },
              "table_header_row": {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      [
        {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <InjectIntl(FormattedText)
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot when DM and hasGuests but its me and not the teammate 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <ChannelIcon
      hasDraft={false}
      isActive={false}
      isArchived={false}
      isInfo={true}
      isUnread={false}
      membersCount={3}
      size={24}
      testID="channel_info.header.channel_icon"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      type="D"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#3f4350",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
          "marginLeft": 13,
        }
      }
      testID="channel_info.header.display_name"
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          testID="channel_info.header.purpose"
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Header"
          id="channel_info.header"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            {
              "adjacentParagraph": {
                "marginTop": 6,
              },
              "horizontalRule": {
                "backgroundColor": "#3f4350",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": {
                "color": undefined,
              },
            }
          }
          disableAtChannelMentionHighlight={true}
          disableGallery={true}
          onChannelLinkPress={[MockFunction]}
          testID="channel_info.header.header"
          textStyles={
            {
              "code": {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": {
                "fontFamily": "Menlo",
              },
              "del": {
                "textDecorationLine": "line-through",
              },
              "emph": {
                "fontStyle": "italic",
              },
              "error": {
                "color": "#d24b4e",
              },
              "heading1": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": {
                "paddingBottom": 8,
              },
              "heading2": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": {
                "paddingBottom": 8,
              },
              "heading3": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": {
                "paddingBottom": 8,
              },
              "heading4": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": {
                "paddingBottom": 8,
              },
              "heading5": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": {
                "paddingBottom": 8,
              },
              "heading6": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": {
                "paddingBottom": 8,
              },
              "link": {
                "color": "#386fe5",
              },
              "mention": {
                "color": "#386fe5",
              },
              "mention_highlight": {
                "backgroundColor": "#ffd470",
                "color": "#1b1d22",
              },
              "strong": {
                "fontWeight": "bold",
              },
              "table_header_row": {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      [
        {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <InjectIntl(FormattedText)
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot when GM and hasGuests 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <ChannelIcon
      hasDraft={false}
      isActive={false}
      isArchived={false}
      isInfo={true}
      isUnread={false}
      membersCount={3}
      size={24}
      testID="channel_info.header.channel_icon"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      type="G"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#3f4350",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
          "marginLeft": 13,
        }
      }
      testID="channel_info.header.display_name"
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <View
      style={
        {
          "paddingHorizontal": 15,
        }
      }
    >
      <InjectIntl(FormattedText)
        defaultMessage="This group message has guests"
        id="channel.hasGuests"
        style={
          {
            "backgroundColor": "transparent",
            "color": "#3f4350",
            "fontSize": 13,
            "marginBottom": 10,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          testID="channel_info.header.purpose"
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Header"
          id="channel_info.header"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            {
              "adjacentParagraph": {
                "marginTop": 6,
              },
              "horizontalRule": {
                "backgroundColor": "#3f4350",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": {
                "color": undefined,
              },
            }
          }
          disableAtChannelMentionHighlight={true}
          disableGallery={true}
          onChannelLinkPress={[MockFunction]}
          testID="channel_info.header.header"
          textStyles={
            {
              "code": {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": {
                "fontFamily": "Menlo",
              },
              "del": {
                "textDecorationLine": "line-through",
              },
              "emph": {
                "fontStyle": "italic",
              },
              "error": {
                "color": "#d24b4e",
              },
              "heading1": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": {
                "paddingBottom": 8,
              },
              "heading2": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": {
                "paddingBottom": 8,
              },
              "heading3": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": {
                "paddingBottom": 8,
              },
              "heading4": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": {
                "paddingBottom": 8,
              },
              "heading5": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": {
                "paddingBottom": 8,
              },
              "heading6": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": {
                "paddingBottom": 8,
              },
              "link": {
                "color": "#386fe5",
              },
              "mention": {
                "color": "#386fe5",
              },
              "mention_highlight": {
                "backgroundColor": "#ffd470",
                "color": "#1b1d22",
              },
              "strong": {
                "fontWeight": "bold",
              },
              "table_header_row": {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      [
        {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <InjectIntl(FormattedText)
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot when is group constrained 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <ChannelIcon
      hasDraft={false}
      isActive={false}
      isArchived={false}
      isInfo={true}
      isUnread={false}
      membersCount={3}
      size={24}
      testID="channel_info.header.channel_icon"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      type="O"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#3f4350",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
          "marginLeft": 13,
        }
      }
      testID="channel_info.header.display_name"
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          testID="channel_info.header.purpose"
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Header"
          id="channel_info.header"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            {
              "adjacentParagraph": {
                "marginTop": 6,
              },
              "horizontalRule": {
                "backgroundColor": "#3f4350",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": {
                "color": undefined,
              },
            }
          }
          disableAtChannelMentionHighlight={true}
          disableGallery={true}
          onChannelLinkPress={[MockFunction]}
          testID="channel_info.header.header"
          textStyles={
            {
              "code": {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": {
                "fontFamily": "Menlo",
              },
              "del": {
                "textDecorationLine": "line-through",
              },
              "emph": {
                "fontStyle": "italic",
              },
              "error": {
                "color": "#d24b4e",
              },
              "heading1": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": {
                "paddingBottom": 8,
              },
              "heading2": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": {
                "paddingBottom": 8,
              },
              "heading3": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": {
                "paddingBottom": 8,
              },
              "heading4": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": {
                "paddingBottom": 8,
              },
              "heading5": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": {
                "paddingBottom": 8,
              },
              "heading6": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": {
                "paddingBottom": 8,
              },
              "link": {
                "color": "#386fe5",
              },
              "mention": {
                "color": "#386fe5",
              },
              "mention_highlight": {
                "backgroundColor": "#ffd470",
                "color": "#1b1d22",
              },
              "strong": {
                "fontWeight": "bold",
              },
              "table_header_row": {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      [
        {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <InjectIntl(FormattedText)
      defaultMessage="Members are managed by linked groups"
      id="mobile.routes.channelInfo.groupManaged"
    />
  </Text>
  <Text
    style={
      [
        {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <InjectIntl(FormattedText)
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot when public channel and hasGuests 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <ChannelIcon
      hasDraft={false}
      isActive={false}
      isArchived={false}
      isInfo={true}
      isUnread={false}
      membersCount={3}
      size={24}
      testID="channel_info.header.channel_icon"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      type="O"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#3f4350",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
          "marginLeft": 13,
        }
      }
      testID="channel_info.header.display_name"
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <View
      style={
        {
          "paddingHorizontal": 15,
        }
      }
    >
      <InjectIntl(FormattedText)
        defaultMessage="This channel has guests"
        id="channel.channelHasGuests"
        style={
          {
            "backgroundColor": "transparent",
            "color": "#3f4350",
            "fontSize": 13,
            "marginBottom": 10,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          testID="channel_info.header.purpose"
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Header"
          id="channel_info.header"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            {
              "adjacentParagraph": {
                "marginTop": 6,
              },
              "horizontalRule": {
                "backgroundColor": "#3f4350",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": {
                "color": undefined,
              },
            }
          }
          disableAtChannelMentionHighlight={true}
          disableGallery={true}
          onChannelLinkPress={[MockFunction]}
          testID="channel_info.header.header"
          textStyles={
            {
              "code": {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": {
                "fontFamily": "Menlo",
              },
              "del": {
                "textDecorationLine": "line-through",
              },
              "emph": {
                "fontStyle": "italic",
              },
              "error": {
                "color": "#d24b4e",
              },
              "heading1": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": {
                "paddingBottom": 8,
              },
              "heading2": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": {
                "paddingBottom": 8,
              },
              "heading3": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": {
                "paddingBottom": 8,
              },
              "heading4": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": {
                "paddingBottom": 8,
              },
              "heading5": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": {
                "paddingBottom": 8,
              },
              "heading6": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": {
                "paddingBottom": 8,
              },
              "link": {
                "color": "#386fe5",
              },
              "mention": {
                "color": "#386fe5",
              },
              "mention_highlight": {
                "backgroundColor": "#ffd470",
                "color": "#1b1d22",
              },
              "strong": {
                "fontWeight": "bold",
              },
              "table_header_row": {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      [
        {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <InjectIntl(FormattedText)
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot with custom status enabled 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <ChannelIcon
      hasDraft={false}
      isActive={false}
      isArchived={false}
      isInfo={true}
      isUnread={false}
      membersCount={3}
      size={24}
      testID="channel_info.header.channel_icon"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      type="D"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#3f4350",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
          "marginLeft": 13,
        }
      }
      testID="channel_info.header.display_name"
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      [
        {
          "paddingHorizontal": 15,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
      ]
    }
    testID="channel_info.header.custom_status"
  >
    <Connect(Emoji)
      emojiName="calendar"
      size={20}
      testID="custom_status.emoji.calendar"
      textStyle={
        [
          {
            "color": "#3f4350",
            "marginRight": 8,
          },
          {
            "bottom": 0,
          },
        ]
      }
    />
    <View
      style={
        {
          "width": "90%",
        }
      }
    >
      <CustomStatusText
        ellipsizeMode="tail"
        numberOfLines={1}
        text="In a meeting"
        textStyle={
          {
            "color": "#3f4350",
            "flex": 1,
            "fontSize": 15,
            "height": "100%",
          }
        }
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          testID="channel_info.header.purpose"
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Header"
          id="channel_info.header"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            {
              "adjacentParagraph": {
                "marginTop": 6,
              },
              "horizontalRule": {
                "backgroundColor": "#3f4350",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": {
                "color": undefined,
              },
            }
          }
          disableAtChannelMentionHighlight={true}
          disableGallery={true}
          onChannelLinkPress={[MockFunction]}
          testID="channel_info.header.header"
          textStyles={
            {
              "code": {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": {
                "fontFamily": "Menlo",
              },
              "del": {
                "textDecorationLine": "line-through",
              },
              "emph": {
                "fontStyle": "italic",
              },
              "error": {
                "color": "#d24b4e",
              },
              "heading1": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": {
                "paddingBottom": 8,
              },
              "heading2": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": {
                "paddingBottom": 8,
              },
              "heading3": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": {
                "paddingBottom": 8,
              },
              "heading4": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": {
                "paddingBottom": 8,
              },
              "heading5": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": {
                "paddingBottom": 8,
              },
              "heading6": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": {
                "paddingBottom": 8,
              },
              "link": {
                "color": "#386fe5",
              },
              "mention": {
                "color": "#386fe5",
              },
              "mention_highlight": {
                "backgroundColor": "#ffd470",
                "color": "#1b1d22",
              },
              "strong": {
                "fontWeight": "bold",
              },
              "table_header_row": {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      [
        {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <InjectIntl(FormattedText)
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot with custom status expiry 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <ChannelIcon
      hasDraft={false}
      isActive={false}
      isArchived={false}
      isInfo={true}
      isUnread={false}
      membersCount={3}
      size={24}
      testID="channel_info.header.channel_icon"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      type="D"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#3f4350",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
          "marginLeft": 13,
        }
      }
      testID="channel_info.header.display_name"
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      [
        {
          "paddingHorizontal": 15,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
      ]
    }
    testID="channel_info.header.custom_status"
  >
    <Connect(Emoji)
      emojiName="calendar"
      size={20}
      testID="custom_status.emoji.calendar"
      textStyle={
        [
          {
            "color": "#3f4350",
            "marginRight": 8,
          },
          {
            "bottom": 8,
          },
        ]
      }
    />
    <View
      style={
        {
          "width": "90%",
        }
      }
    >
      <CustomStatusText
        ellipsizeMode="tail"
        numberOfLines={1}
        text="In a meeting"
        textStyle={
          {
            "color": "#3f4350",
            "flex": 1,
            "fontSize": 15,
            "height": "100%",
          }
        }
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
      />
      <CustomStatusExpiry
        showPrefix={true}
        textStyles={
          {
            "color": undefined,
            "fontSize": 13,
          }
        }
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        time="2200-04-13T18:09:12.451Z"
      />
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          testID="channel_info.header.purpose"
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      {
        "marginTop": 15,
      }
    }
  >
    <TouchableHighlight
      onLongPress={[Function]}
    >
      <View
        style={
          {
            "paddingHorizontal": 15,
          }
        }
      >
        <InjectIntl(FormattedText)
          defaultMessage="Header"
          id="channel_info.header"
          style={
            {
              "backgroundColor": "transparent",
              "color": "#3f4350",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            {
              "color": "#3f4350",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            {
              "adjacentParagraph": {
                "marginTop": 6,
              },
              "horizontalRule": {
                "backgroundColor": "#3f4350",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": {
                "color": undefined,
              },
            }
          }
          disableAtChannelMentionHighlight={true}
          disableGallery={true}
          onChannelLinkPress={[MockFunction]}
          testID="channel_info.header.header"
          textStyles={
            {
              "code": {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": {
                "fontFamily": "Menlo",
              },
              "del": {
                "textDecorationLine": "line-through",
              },
              "emph": {
                "fontStyle": "italic",
              },
              "error": {
                "color": "#d24b4e",
              },
              "heading1": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": {
                "paddingBottom": 8,
              },
              "heading2": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": {
                "paddingBottom": 8,
              },
              "heading3": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": {
                "paddingBottom": 8,
              },
              "heading4": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": {
                "paddingBottom": 8,
              },
              "heading5": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": {
                "paddingBottom": 8,
              },
              "heading6": {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": {
                "paddingBottom": 8,
              },
              "link": {
                "color": "#386fe5",
              },
              "mention": {
                "color": "#386fe5",
              },
              "mention_highlight": {
                "backgroundColor": "#ffd470",
                "color": "#1b1d22",
              },
              "strong": {
                "fontWeight": "bold",
              },
              "table_header_row": {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      [
        {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        {
          "paddingHorizontal": 15,
        },
      ]
    }
  >
    <InjectIntl(FormattedText)
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;
